fixed a beautiful background style that works with almost all covers

--- a/src/components/FeaturedSong/FeaturedSong.module.css
+++ b/src/components/FeaturedSong/FeaturedSong.module.css
@@ -1,10 +1,4 @@
-.featuredSong {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background-color: rgba(95, 158, 160, 0.651);
-  padding: 24px;
-  border-radius: 10px;
-  font-family: "Pixelify Sans", sans-serif;
+h3,
+h4 {
+  margin-top: 20px;
 }
